<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HearthMaster</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="class_warrior">Warrior</string>
    <string name="class_paladin">Paladin</string>
    <string name="class_hunter">Hunter</string>
    <string name="class_rogue">Rogue</string>
    <string name="class_priest">Priest</string>
    <string name="class_shaman">Shaman</string>
    <string name="class_mage">Mage</string>
    <string name="class_warlock">Warlock</string>
    <string name="class_druid">Druid</string>
    <string name="class_neutral">Neutral</string>
    <string name="set_basic">Basic</string>
    <string name="set_expert">Classic</string>
    <string name="set_reward">Reward</string>
    <string name="set_missions">Missions</string>
    <string name="set_promition">Promotion</string>
    <string name="set_credits">Credits</string>
    <string name="type_minion">Minion</string>
    <string name="type_spell">Spell</string>
    <string name="type_weapon">Weapon</string>
    <string name="quality_free">Free</string>
    <string name="quality_common">Common</string>
    <string name="quality_rare">Rare</string>
    <string name="quality_epic">Epic</string>
    <string name="quality_legendary">Legendary</string>
    <string name="race_none">None</string>
    <string name="race_murloc">Murloc</string>
    <string name="race_demon">Demon</string>
    <string name="race_beast">Beast</string>
    <string name="race_totem">Totem</string>
    <string name="race_pirate">Pirate</string>
    <string name="race_dragon">Dragon</string>
    <string name="all">All</string>
    <string name="set_naxxramas">Naxxramas</string>
    <string name="set_promotion">Promotion</string>
    <string name="new_deck">New Deck</string>
    <string name="choose_your_hero">Choose Your Hero</string>
    <string name="stats_minion">Minion:</string>
    <string name="stats_spell">Spell:</string>
    <string name="stats_weapon">Weapon:</string>
    <string name="deck_name_custom">Custom %s</string>
    <string name="dialog_enter_deck_name">Enter deck name</string>
    <string name="dialog_edit_deck_name">Edit deck name</string>
    <string name="press_again_to_quit">Press again to quit</string>
    <string name="action_about">About</string>
    <string name="drawer_close">close drawer</string>
    <string name="drawer_open">open drawer</string>
    <string name="data_version">Data Version: </string>
    <string name="data_version_code">2.6.0.8834</string>
    <string name="version">Version: </string>
    <string name="race_mech">Mech</string>
    <string name="set_gvg">Goblins vs Gnomes</string>
    <string name="set_bm">Blackrock Mountain</string>
    <string name="copyright_notice">This app is only for personal use. No commercial redistribution is allowed.\n\nHeroes of Warcraft is a trademark, and Hearthstone is a registered trademark of Blizzard Entertainment, Inc. in the U.S. and/or other countries.\n\nAll the contents and images included in this app are copyrighted materials of Blizzard Entertainment.</string>

</resources>
